# ai_auto_wxgzh

./: .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
knowledge/: template10.html
knowledge/templates/: template1.html  template2.html  template3.html  template4.html  template5.html  template6.html  template7.html  template8.html  template9.html
src/ai_auto_wxgzh/: crew.py  crew_main.py  main.py
src/ai_auto_wxgzh/config/: agents.yaml  config.py  config.yaml  tasks.yaml
src/ai_auto_wxgzh/gui/: ConfigEditor.py  MainGUI.py
src/ai_auto_wxgzh/tools/: custom_tool.py  hotnews.py  wx_publisher.py
src/ai_auto_wxgzh/utils/: comm.py  log.py  utils.py
