[project]
name = "ai_auto_wxgzh"
version = "0.1.0"
description = "ai_auto_wxgzh using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
ai_auto_wxgzh = "ai_auto_wxgzh.main:run"
run_crew = "ai_auto_wxgzh.main:run"
train = "ai_auto_wxgzh.main:train"
replay = "ai_auto_wxgzh.main:replay"
test = "ai_auto_wxgzh.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
